# thc-chess-library

./: CMakeLists.txt  LICENSE  README.md  thc-chess-library.sln
Demo/: Demo.vcxproj  build.sh
RebuildAndTest/: RebuildAndTest.vcxproj  build.sh
project/msvc/: chessboard.sln  chessboard.vcxproj  chessboard.vcxproj.filters  qt-msvc.targets  qt-msvc.xml
project/src/: MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  Renderer.cpp  Renderer.h  main.cpp
qt/include/QtCore/: qconfig.h  qtcore-config.h  qtcoreversion.h
qt/include/QtCore/5.13.1/QtCore/private/: qconfig_p.h  qtcore-config_p.h
qt/include/QtGui/: qtguiversion.h
qt/include/QtWidgets/: qtwidgetsversion.h
qt/lib/: Qt5Core.lib  Qt5Cored.lib  Qt5Widgets.lib  Qt5Widgetsd.lib
src/: ChessDefs.h  ChessEngine.cpp  ChessEngine.h  ChessEvaluation.cpp  ChessEvaluation.h  ChessPosition.cpp  ChessPosition.h  ChessPositionRaw.h  ChessRules.cpp  ChessRules.h  GeneratedLookupTables.h  HashLookup.h  Move.cpp  Move.h  Portability.cpp  PrivateChessDefs.cpp  PrivateChessDefs.h  demo.cpp  main.cpp  test-framework.cpp  thc-regen.cpp  thc-regen.h  thc.cpp  thc.h  util.cpp  util.h
